Bug 382014 - No opening balance edit for investment accounts
Summary: No opening balance edit for investment accounts
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.8.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-07-05 13:45 UTC by Ralf Habacker
Modified: 2019-08-30 14:16 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1,5.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2017-07-05 13:45:48 UTC
On creating investment accounts it is possible to enter an opening balance but it could not be edited afterwards because the opening balance field is not displayed in the account editing dialog.

How to reproduce:
1. Create an investment account and set a non zero opening balance
2. Edit the account and try to set the opening balance to zero

What happens:
There is no input field displaying the opening balance account

What should happen:
The opening balance account field should be displayed in the account editor
to be able to set it to zero.

Further informations:
Any other account type except categories has the possibility to edit the opening balance. 
A workaround is to delete the opening balance transaction for this account in the ledger view.
Comment 1 Ralf Habacker 2017-07-05 14:53:54 UTC
Git commit cb25aca805b461f211fe085570e110696bc7d1df by Ralf Habacker.
Committed on 05/07/2017 at 14:03.
Pushed by habacker into branch '4.8'.

Fix 'No opening balance edit for investment accounts'

Enable editing of opening balance value for investment accounts.
FIXED-IN:4.8.1

M  +1    -1    kmymoney/kmymoney.cpp

https://commits.kde.org/kmymoney/cb25aca805b461f211fe085570e110696bc7d1df