Fix 'No opening balance edit for investment accounts'

Enable editing of opening balance value for investment accounts.

BUG:382014
FIXED-IN:4.8.1